[package]
name = "ferret"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
lazy_static = "1.4.0"
once_cell = "1.8.0"
jni = "0.19.0"
# cafebabe = "0.4.2"
cafebabe = {path = "./cafebabe"}
[build-dependencies]
cc = "1.0"
bindgen = "0.59.1"